--- a/Rapport/1Chapters/Simulation.tex
+++ b/Rapport/1Chapters/Simulation.tex
@@ -1,5 +1,5 @@
 \chapter{Simulation}
-To make sure the theory will be performing as expected when implemented in the DSP a simulation will be performed before, to make sure every subsystem will function properly with each other. On \autoref{fig:OverallSimulation} an outline of the entire system is depicted. It shows how a signal is applied to the first down sampling and the applied to the following consecutive down-samplings. When the signal has reach the four lowest band, an RMS compressor is applied, before each step is up-sampled and ready for playback.
+To make sure the theory will be performing as expected when implemented in the DSP a simulation will be performed before, to make sure every subsystem will function properly with each other. On \autoref{fig:OverallSimulation} an outline of the entire system is depicted. It shows how a signal is applied to the first downsampling and the applied to the following consecutive downsamplings. When the signal has reach the four lowest band, a RMS compressor is applied, before each step is upsampled and ready for playback.
 
 \begin{figure}[H]
 \centering
@@ -10,16 +10,25 @@ To make sure the theory will be performing as expected when implemented in the D
 
 Under the simulation, the following settings are set/applied:
 \begin{itemize}
-\item The sampling frequency is 48 kHz
-\item The test signal played with an amplitude of 0.5
-\item The test signal is a logarithmic sweep from 0 Hz to 500 Hz during a 10 second period
-\item The delays throughout the system is calculated based on each filter used in the simulation
+\item The sampling frequency is 48 kHz.
+\item The test signal played with an amplitude of 0.5.
+\item The test signal is a logarithmic sweep from 0 Hz to 500 Hz during a 10 second period.
+\item The delays are as follows (refer to \autoref{app:FIR_Matlab} for calculations):
+\begin{itemize}
+\item Stage 1: 5309 samples.
+\item Stage 2: 2621 samples.
+\item Stage 3: 1277 samples.
+\item Stage 4: 605 samples.
+\item Stage 5: 269 samples.
+\item Stage 6: 101 samples.
+\item Stage 7: 17 samples.
+\end{itemize}
 \end{itemize}
 
 The simulation file and needed scripts are found at \path{CD://something }
 
 \section{Subsystems}
-In the simulation the following subsystem depicted on \autoref{fig:SubsystemSimulation}, are used. On \autoref{fig:DownsamplingSimulation} the down-sampling system is shown. It shows how the signal is first filtered followed by subtracting it from the original signal and finally down-sampled. \autoref{fig:UpsamplingSimulation} shows the upsampling system where it shows how the upsampling flow of the signal is. Namely how the signal is zero-padded followed by an lowpass filtering and then applied a gain of 2 corresponding with the up-samplings factor. \autoref{fig:RMSCompressorSimulation} Shows the compressor algorithm applied in the simulation. The compressor calculates the RMS where an if statement determined whether a gain of 1 or the model should be used. When the gain has been determined it is multiplied on before being ready for up-sampling. 
+In the simulation the following subsystem depicted on \autoref{fig:SubsystemSimulation}, are used. On \autoref{fig:DownsamplingSimulation} the downsampling system is shown. It shows how the signal is first filtered followed by subtracting it from the original signal and finally downsampled. \autoref{fig:UpsamplingSimulation} shows the upsampling system where it shows how the upsampling flow of the signal is. Namely how the signal is zero-padded followed by an lowpass filtering and then applied a gain of 2 corresponding with the up-samplings factor. \autoref{fig:RMSCompressorSimulation} Shows the compressor algorithm applied in the simulation. The compressor calculates the RMS where an if statement determined whether a gain of 1 or the model should be used. When the gain has been determined it is multiplied on before being ready for up-sampling. 
 \begin{figure}[H]
 \centering
 \begin{subfigure}[t]{0.49\textwidth}
