--- a/Rapport/1Chapters/RMS/RMSMAIN.tex
+++ b/Rapport/1Chapters/RMS/RMSMAIN.tex
@@ -1,4 +1,4 @@
-\chapter{RMS Compressor}
+\chapter{RMS Compressor}\label{cha:CompressorDesign}
 This chapter will cover the design thoughts and considerations in designing the RMS compressor which will be used to suppress to large amplitude levels in the lower frequencies. 
 \vspace{2mm}
 From \autoref{app:journal_speaker_test2} It showed that the THD of the speaker increased as the amplitude is increased. It can be shown from figure \autoref{fig:com_micALLRMS} that the amplitude difference of the second and third harmonic has a decay correlating with an exponential decay. From these measurements it is possible to determine a given threshold were the speaker will perform with optimum conditions. 
