--- a/Rapport/2Appendix/AppendixMAIN.tex
+++ b/Rapport/2Appendix/AppendixMAIN.tex
@@ -25,5 +25,6 @@
 
 \input{2Appendix/FIRMatlab}
 
-\input{2Appendix/AcceptDecimation}
+\input{2Appendix/AcceptFilters}
 
+\input{2Appendix/AcceptFrequencyResponse}
