Skrevet til test

--- a/Rapport/1Chapters/2Requirements/Requirements.tex
+++ b/Rapport/1Chapters/2Requirements/Requirements.tex
@@ -7,7 +7,8 @@ As described in \autoref{sec:problem_statement} the coil must not hit the backpl
 \item Overall system
 \begin{enumerate}
 \item [\textlabel{1}{coil}] The coil must not hit the backplate.\\
-\item [\textlabel{2}{realtime}] The system must run in real time.
+\item [\textlabel{2}{realtime}] The system must run in real time and have a delay no more than 200 ms.
+
 \end{enumerate}
 \end{itemize}
 
