--- a/Rapport/main.tex
+++ b/Rapport/main.tex
@@ -122,6 +122,7 @@
 
 \part{Acceptance Test \& Conclusion}
 
+\include{1Chapters/Acceptance/AcceptanceMAIN}
 
 \include{1Chapters/EndFormalia/Conclusion}
 
