--- a/Rapport/1Chapters/Acceptance/acceptance_test.tex
+++ b/Rapport/1Chapters/Acceptance/acceptance_test.tex
@@ -1,1 +1,9 @@
 \chapter{Acceptance test}
+
+
+
+
+\begin{enumerate}
+\item [\textlabel{1}{coil}] The coil must not hit the backplate.\\
+\item [\textlabel{2}{realtime}] The system must run in real time.
+\end{enumerate}
