--- a/Rapport/2Appendix/AcceptFrequencyResponse.tex
+++ b/Rapport/2Appendix/AcceptFrequencyResponse.tex
@@ -1,19 +1,20 @@
-\chapter{Accepttest of decimation and interpolation filter}\label{app:journal_decimationFilter}
-The purpose of this test is to test the designed decimation filter to verify the magnitude response and the phase response to verify demand \textbf{XX}, verify the interpolation filter in relation to demand \textbf{XX} and verify that the interpolation filter does not affect the bandwidth of the decimation signal.
+\chapter{Accepttest of Frequency response}\label{app:journal_Frequency_Response}
+The purpose of this test is verify requirement \textbf{XX} concerning the linearity of the frequence responce of the system.
 
 \section{Setup}
 The setup of this test are depicted in \textbf{XX}, where the equipment is catalogued in \textbf{XX}, and described as follows:
 
 \begin{itemize}
-\item Magnitude response and phase response will be measured with a NI-4461 based audio analyser. 
+\item Frequency reponse will be measured by a Harmonie analyzer.
+\item A noise generator will generate the following for the test. 
 \begin{itemize}
 \item Sampling frequency: 48000 Hz.
-\item Generator amplitude: 0.50000 V.
-\item Frequency sweep: 20 Hz - 20000 Hz.
+\item Generator amplitude: \textbf{X} V.
+\item Pink noise.
 \end{itemize}
-\item The software of the system used for the  decimation test is found at CD. \todo[inline]{CD}
-\item The software of the system used for the  interpolation test is found at CD. \todo[inline]{CD}
-\item The software of the system used for the  comparison test is found at CD. \todo[inline]{CD}
+\item The software of the system used for the bypass test is found at CD. \todo[inline]{CD}
+\item The software of the system used for the stage1 test is found at CD. \todo[inline]{CD}
+\item The software of the system used for the system test is found at CD. \todo[inline]{CD}
 \end{itemize}
 
 
@@ -32,11 +33,12 @@ The setup of this test are depicted in \textbf{XX}, where the equipment is catal
 \ra{1.3}
 \begin{tabular}{S[table-format=1]ccc} \toprule
     {Item} & {Description} & {AAU-no} \\ \bottomrule 
-    1      &  NI-4461 based audio analyser  & 64640  \\ 
-    2      &  System  & x  \\  \bottomrule 
+    1      &  Harmonie  & 60923  \\ 
+    2      &  Harmonie PC  & 56524  \\ 
+    3      &  Sine/Noise generator type 1049  & 08233  \\  \bottomrule 
 \end{tabular}
 \caption{Table over equipment used in the test}
-\label{tab:UsedEquipmentDecimation}
+\label{tab:UsedEquipmentFreqResponse}
 \end{table}
 \vspace{-5mm}
 
@@ -45,27 +47,17 @@ The setup of this test are depicted in \textbf{XX}, where the equipment is catal
 The procedure for this experiment is described as follows:
 \vspace{-5mm}
 \begin{enumerate}
-\item Setup the NI-4461 based audio analyser with the mentioned settings.
-\item Setup the system with the correct software as described based on which filter is tested.
-\item Start the sine sweep test.
+\item Setup the noise generator with the mentioned settings.
+\item Setup the Harmonie and the Harmonie PC
+\item Start recording on the PC
 \item When finished save the results of the test.
 \end{enumerate}
 
 \section{Data Extraction}
-The raw data can be found on CD for decimation filter data, and interpolation filter data on CD. \todo[inline]{CD} The following raw data is given:
-\begin{itemize}
-\item Frequency [Hz]
-\item Amplitude [dB]
-\item Phase 	[deg]
-\item THD 		[dB]
-\item HD 2 		[dB ref fund]
-\item HD 3		[dB ref fund]
-\item HD 4      [dB ref fund]
-\item HD 5      [dB ref fund]
-\end{itemize} 
-Which is extracted using the matlab script found on CD \todo[inline]{CD}, and gives the magnitude and phase reponse of the filter.
+
+
 \section{Analysis}
-The analysis will verify the demands for both filters.
+The analysis will verify the demands for both one stage and the entire system.
 
 \subsection*{Decimation filter}
 
@@ -76,7 +68,7 @@ The analysis will verify the demands for both filters.
 
 
 \section{Error sources}
-The generator on the NI-4461 card has a deviation of $\pm$ 0,008 dB from 20 Hz - 20 kHz. The analyzer on the NI-4461 card has a deviation of : $\pm$ 0,08 dB from 20 Hz - 92 kHz. 
+
 
 \section{Conclusion}
 It can be concluded from the two test that both filters meet their respective requirements.
