--- a/Rapport/2Appendix/AcceptFrequencyResponse.tex
+++ b/Rapport/2Appendix/AcceptFrequencyResponse.tex
@@ -14,15 +14,15 @@ The setup of this test are depicted in \textbf{XX}, where the equipment is catal
 \end{itemize}
 \item The software of the system used for the bypass test is found at CD. \todo[inline]{CD}
 \item The software of the system used for the stage1 test is found at CD. \todo[inline]{CD}
-\item The software of the system used for the system test is found at CD. \todo[inline]{CD}
+\item The software of the system used for the full system test is found at CD. \todo[inline]{CD}
 \end{itemize}
 
 
 \subsection*{Test Setup}
 \begin{figure}[H]
 \centering
-\includegraphics[width=0.9\textwidth]{AcceptDec.png}
-\label{fig:AcceptDec}
+\includegraphics[width=0.9\textwidth]{FreqReponseSetup.png}
+\label{fig:AcceptFreqResponse}
 \caption{Test setup.}
 \end{figure}
 
@@ -59,16 +59,15 @@ The procedure for this experiment is described as follows:
 \section{Analysis}
 The analysis will verify the demands for both one stage and the entire system.
 
-\subsection*{Decimation filter}
+\subsection*{Bypass}
 
 
-\subsection*{Interpolation filter}
+\subsection*{Stage1}
 
-\subsection*{Compare test}
+\subsection*{Full system}
 
 
 \section{Error sources}
 
 
 \section{Conclusion}
-It can be concluded from the two test that both filters meet their respective requirements.
