--- a/Rapport/1Chapters/1Preanalysis/Introduction.tex
+++ b/Rapport/1Chapters/1Preanalysis/Introduction.tex
@@ -1,5 +1,13 @@
 \chapter{Introduction}
+The active loudspeaker is more and more used instead of the passive speaker which means that the possibilities of processing the input signal like equalizing, limiting and compressing is more common.     
 
+Danger
+
+digital
+
+protection
+
+Optimal sound 
 
 % The market for Bluetooth loudspeakers has been growing considerably the last few years. According to \gls{CTA} the revenue of Bluetooth loudspeakers has been growing 69 \% between 2013 and 2014 \cite{sou:CTA}. The high growth is partly due to the increasing usage of smartphones and music streaming services, such as Spotify. As a result it is now more desirable for some users to wirelessly connect the smartphone to an audio system through for instance Bluetooth. By doing so, the user can use the smartphone to remote control his or her audio system. 
 
