--- a/Rapport/2Appendix/AcceptRMS.tex
+++ b/Rapport/2Appendix/AcceptRMS.tex
@@ -1,5 +1,5 @@
-\chapter{Accepttest of Frequency response}\label{app:journal_Frequency_Response}
-The purpose of this test is verify requirement \textbf{XX} concerning the linearity of the frequence responce of the system.
+\chapter{Accepttest of RMS compressor}\label{app:journal_Frequency_Response}
+The purpose of this test is verify requirement \textbf{XX} concerning RMS compressor.
 
 \section{Setup}
 The setup of this test are depicted in \textbf{XX}, where the equipment is catalogued in \textbf{XX}, and described as follows:
@@ -73,29 +73,6 @@ There are 30 bands from 20 Hz to 20 kHz, see \autoref{tb:freqBands}, where a mag
 
 \section{Analysis}
 
-\begin{figure}[H]
-	\centering
-	\tikzsetnextfilename{FreqRespBypass}
-	\input{figures/FreqRespBypass.tex}
-	\caption{Frequency reposnse of bypassed signal with std´s. Mean=-55.264 dB (red line). Std=$\pm$0.121 dB (dashed red line).}
-	\label{fig:FreqRespBypass}
-\end{figure}
-
-\begin{figure}[H]
-	\centering
-	\tikzsetnextfilename{FreqRespSystem}
-	\input{figures/FreqRespSystem.tex}
-	\caption{Frequency reposnse of full system signal with std´s. Mean=-55.677 dB (red line). Std=$\pm$0.205 dB (dashed red line).}
-	\label{fig:FreqRespSystem}
-\end{figure}
-
-\begin{figure}[H]
-	\centering
-	\tikzsetnextfilename{FreqRespComp}
-	\input{figures/FreqRespComp.tex}
-	\caption{Frequency reposnse of bypassed and full system signal. Bypass (blue), Full system (Orange), mean difference = 0.4130 dB}
-	\label{fig:FreqRespComp}
-\end{figure}
 
 \section{Error sources}
 
