--- a/Rapport/2Appendix/AppendixMAIN.tex
+++ b/Rapport/2Appendix/AppendixMAIN.tex
@@ -25,6 +25,13 @@
 
 \input{2Appendix/FIRMatlab}
 
+\input{2Appendix/LookUP}
+
 \input{2Appendix/AcceptFilters}
 
 \input{2Appendix/AcceptFrequencyResponse}
+
+\input{2Appendix/AcceptRMS}
+
+\input{2Appendix/AcceptNoise}
+
